welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:6: error: variable direction in class AbstractBuggle cannot be accessed in plm.runtime90.SnakeBuggle
		if (getDirection() == direction.EST) {
                                      ^